<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="set_800"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut"
        android:shortcutShortLabel="@string/shortcut_set_800_short"
        android:shortcutLongLabel="@string/shortcut_set_800_long">
        <intent
            android:action="com.gendex.app.action.SET_800"
            android:targetPackage="com.gendex.app"
            android:targetClass="com.gendex.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="restore"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut"
        android:shortcutShortLabel="@string/shortcut_restore_short"
        android:shortcutLongLabel="@string/shortcut_restore_long">
        <intent
            android:action="com.gendex.app.action.RESTORE"
            android:targetPackage="com.gendex.app"
            android:targetClass="com.gendex.app.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="developer"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut"
        android:shortcutShortLabel="@string/shortcut_developer_short"
        android:shortcutLongLabel="@string/shortcut_developer_long">
        <intent
            android:action="com.gendex.app.action.DEVELOPER_SETTINGS"
            android:targetPackage="com.gendex.app"
            android:targetClass="com.gendex.app.MainActivity" />
    </shortcut>
</shortcuts>
